# mandelbrot-rust

./: .gitignore  Cargo.toml  README.md
src/: Util.rs  complex_numbers.rs  main.rs
