[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
package = "0.0.0"
#sdl2_gfx = "0.24.0"
#sdl2 = "0.35.2"


[profile.release]
debug = true



[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["gfx"]